syntax = "proto3";

package notification;

option go_package = "github.com/justjack1521/mevium/pkg/genproto/protom";

message BattleComplete {
  string player_id = 1;
  string player_name = 2;
  int32 player_level = 3;
  uint64 score = 4;
  string region_id = 5;
  int32 node_index = 6;
  BattleLoadout primary_loadout = 7;
}

message BattleLoadout {
  string job_card_id = 1;
  int32 sub_job_index = 2;
  string weapon_id = 3;
  repeated BattleLoadoutCard ability_cards = 4;
}

message BattleLoadoutCard {
  string ability_card_id = 1;
  int32 ability_level = 3;
  int32 ability_card_level = 2;
  int32 extra_skill_unlock = 4;
  int32 over_boost_level = 5;
  int32 slot_index = 6;
}

message BattleRankingInfo {
  string ranking_id = 1;
  string short_code = 2;
  BattlePlayerRank player_ranking = 3;
  repeated BattlePlayerRank upper_rankings = 4;
  repeated BattlePlayerRank lower_rankings = 5;
  repeated BattlePlayerRank top_rankings = 6;
  map<int64, double> rank_range_scores = 7;
}

message BattlePlayerRank {
  string player_id = 1;
  string player_name = 2;
  int32 player_level = 3;
  double score = 4;
  int64 rank = 5;
  BattleLoadout primary_loadout = 6;
}

message BattleRankingClaim {
  bool claimed = 1;
  bool ready_to_claim = 2;
  BattleRankingInfo ranking_info = 3;
}